# libQtShadowsocks

./: .astylerc  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: BuildBotan.cmake  BuildQrencode.cmake  ConfigPkg.cmake  ConfigPrint.cmake  xmake.init.mk
cmake/xmake/: InstallHelper.cmake  PackageConfig.cmake  xmake.mk
docs/: RFC.md  local.mk
source/: CMakeLists.txt  config.json
source/config/: cmdArgs.cpp  cmdArgs.h  config.cpp  config.h  config.h.in  config.json.in  config.md  configJson.cpp  configJson.h
source/core/: CMakeLists.txt  QtShadowsocks
source/core/crypto/: chacha.cpp  chacha.h  cipher.cpp  cipher.h  encryptor.cpp  encryptor.h  rc4.cpp  rc4.h
source/core/network/: address.cpp  address.h  httpproxy.cpp  httpproxy.h  socketstream.cpp  socketstream.h  tcprelay.cpp  tcprelay.h  tcprelayclient.cpp  tcprelayclient.h  tcprelayserver.cpp  tcprelayserver.h  tcpserver.cpp  tcpserver.h  udprelay.cpp  udprelay.h
source/core/types/: address.cpp  address.h  profile.h
source/core/util/: common.cpp  controller.cpp
source/core/utils/: common.cpp  common.h  connectivity.cpp  connectivity.h  controller.cpp  controller.h  export.h  profile.cpp  profile.h
source/gui/: CMakeLists.txt  confighelper.cpp  confighelper.h  connection.cpp  connection.h  connectionitem.cpp  connectionitem.h  connectiontablemodel.cpp  connectiontablemodel.h  editdialog.cpp  editdialog.h  icons.qrc  ip4validator.cpp  ip4validator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portvalidator.cpp  portvalidator.h  qrcodecapturer.cpp  qrcodecapturer.h  qrwidget.cpp  qrwidget.h  settingsdialog.cpp  settingsdialog.h  shadowsocksqt.desktop  sharedialog.cpp  sharedialog.h  sqprofile.cpp  sqprofile.h  ss-qt5.rc  ssqt.rc  ssvalidator.cpp  ssvalidator.h  statusnotifier.cpp  statusnotifier.h  translations.qrc  urihelper.cpp  urihelper.h  (+2 more)
source/lib/: CMakeLists.txt
source/lib/crypto/: chacha.cpp  chacha.h  cipher.cpp  cipher.h  encryptor.cpp  encryptor.h  rc4.cpp  rc4.h
source/lib/network/: httpproxy.cpp  httpproxy.h  socketstream.cpp  socketstream.h  tcprelay.cpp  tcprelay.h  tcprelayclient.cpp  tcprelayclient.h  tcprelayserver.cpp  tcprelayserver.h  tcpserver.cpp  tcpserver.h  udprelay.cpp  udprelay.h
source/lib/types/: address.cpp  address.h  profile.cpp  profile.h
source/lib/util/: addresstester.cpp  addresstester.h  common.cpp  common.h  controller.cpp  controller.h  export.h
source/tui/: CMakeLists.txt  client.cpp  client.h  main.cpp  tui.cpp  tui.h  utils.cpp  utils.h
test/: CMakeLists.txt  address.cpp  chacha.cpp  cipher.cpp  encryptor.cpp  profile.cpp
